INT: Ajustado Html da página, adicionado CSS.

--- a/personal.html
+++ b/personal.html
@@ -16,9 +16,9 @@
             <a class="Links"  href="utilLinks.html">Links úteis</a>
         </nav>
         <article class="Home">
-        	<p class="HomeText"> Rafael Rocha de Carvalho</p>
-        	<p class="HomeText"> Aluno Graduando da UFPR </p>
-                <p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento</p>
+        	<a class="LinksPers"  href="https://github.com/memphis47">
+                        <img class="image" src="github.png" alt="GITHUB" >
+                </a>
         </article>
 
     </body>
