INT:Atualizado css e html das páginas.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,35 @@
         
     </head>
     <body>
-        <nav class="LeftMenu">
-            <header>
-                <p class="Nome" >Rafael Rocha de Carvalho</p>
-            </header>
-            <a class="Links"  href="index.html">Home</a>
-            <a class="Links"  href="personal.html">Páginas pessoais</a>
-            <a class="Links"  href="utilLinks.html">Links úteis</a>
-        </nav>
-        <article class="Home">
-        	<p class="HomeText"> Rafael Rocha de Carvalho</p>
-        	<p class="HomeText"> Aluno Graduando da UFPR </p>
-                <p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento</p>
-        </article>
-
+	<nav >
+	        <article class="LeftMenu">
+			<header>
+				<p class="Nome" >Rafael Rocha de Carvalho</p>
+			</header>
+			<a class="Links"  href="#">
+					<img class="imageUtil" src="Images/one-piece.png" alt="Home" >
+			</a>
+			<a class="Links"  href="index.html">Home</a>
+			<a class="Links"  href="personal.html">Páginas pessoais</a>
+			<a class="Links"  href="utilLinks.html">Links úteis</a>
+                        <footer class="footCss">
+                                <p>
+                                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                                            <img style="border:0;width:88px;height:31px"
+                                                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                                alt="CSS válido!" />
+                                        </a>
+                                </p>
+                        </footer>
+				
+		</article>
+		<article class="Home">
+			<ul>
+				<li><p class="HomeTextTop"> Rafael Rocha de Carvalho</p></li>
+				<li><p class="HomeText"> Aluno Graduando da UFPR no curso de Bacharelado em Ciência da Computação</p></li>
+				<li><p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento</p></li>
+			</ul>
+		</article>
+	</nav>
     </body>
 </html>
