--- a/personal.html
+++ b/personal.html
@@ -7,19 +7,60 @@
         
     </head>
     <body>
-        <nav class="LeftMenu">
-            <header>
-                <p class="Nome" >Rafael Rocha de Carvalho</p>
-            </header>
-            <a class="Links"  href="index.html">Home</a>
-            <a class="Links"  href="personal.html">Páginas pessoais</a>
-            <a class="Links"  href="utilLinks.html">Links úteis</a>
-        </nav>
-        <article class="Home">
-        	<a class="LinksPers"  href="https://github.com/memphis47">
-                        <img class="image" src="github.png" alt="GITHUB" >
-                </a>
-        </article>
+        <nav >
+	        <article class="LeftMenu">
+		        <header>
+				<p class="Nome" >Rafael Rocha de Carvalho</p>
+			</header>
+			<a class="Links"  href="#">
+				<img class="imageUtil" src="Images/one-piece.png" alt="Personal" >
+			</a>
+			<a class="Links"  href="index.html">Home</a>
+			<a class="Links"  href="personal.html">Páginas pessoais</a>
+			<a class="Links"  href="utilLinks.html">Links úteis</a>
+			<footer class="footCss">
+                                <p>
+                                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                                            <img style="border:0;width:88px;height:31px"
+                                                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                                alt="CSS válido!" />
+                                        </a>
+                                </p>
+                        </footer>	
+		</article>
+		<article class="Home">
+			<header>
+				<p class="pageDefinition" >Páginas Pessoais</p>
+			</header>
+			<p class="HomeText"> Páginas como meus repositórios no GitHub, meu perfil no stackExchange, no social MSDN e na Steam</p>
+			<table class="tables"><!-- tabela para organizar os links da página -->
+		                <tr>
+			                <th><a class="LinksPers" target="_blank" href="https://github.com/memphis47">
+				                <img class="image" src="Images/github.png" alt="GITHUB" >
+					    </a>
+				        </th>
+					<th><a class="LinksPers" target="_blank" href="http://stackoverflow.com/users/2424721/sams15">
+						<img class="imageUtil" src="Images/Stack_Exchange_Logo.png" alt="StackOverflow" >
+					    </a>
+					</th>
+				</tr>
+				<tr>
+				        <th><a class="LinksPers" target="_blank" href="http://social.msdn.microsoft.com/profile/memphis47/">
+						<img class="imageUtil" src="Images/msdn.png" alt="Social MSDN" >
+					    </a>
+                                        </th>
+					<th><a class="LinksPers" target="_blank" href="#">
+					        <img class="imageUtil" src="Images/steam.png" alt="UFPR" >
+        				    </a>
+                                        </th>
+				</tr>
+			</table>
+			<footer class="foot">
+					<p class="quote">"Such a waste of talent. He chose money over power. In this town, a mistake nearly everyone makes. Money is the Mc-mansion in Sarasota that starts falling apart after 10 years. Power is the old stone building that stands for centuries. I cannot respect
+					someone who doesn't see the difference." Frank Underwood</p>
+		        </footer>
+	        </article>
+	</nav>
 
     </body>
 </html>
