--- a/utilLinks.html
+++ b/utilLinks.html
@@ -7,18 +7,58 @@
         
     </head>
     <body>
-        <nav class="LeftMenu">
-            <header>
-                <p class="Nome" >Rafael Rocha de Carvalho</p>
-            </header>
-            <a class="Links"  href="index.html">Home</a>
-            <a class="Links"  href="personal.html">Páginas pessoais</a>
-            <a class="Links"  href="utilLinks.html">Links úteis</a>
-        </nav>
-        <article class="Home">
-        	<p class="HomeText"> Rafael Rocha de Carvalho</p>
-        	<p class="HomeText"> Aluno Graduando da UFPR </p>
-        </article>
-
+        <nav>
+	        <article class="LeftMenu">
+		        <header>
+			        <p class="Nome" >Rafael Rocha de Carvalho</p>
+			</header>
+			<a class="Links"  href="#">
+			        <img class="imageUtil" src="Images/one-piece.png" alt="utilLinks" >
+			</a>
+			<a class="Links"  href="index.html">Home</a>
+			<a class="Links"  href="personal.html">Páginas pessoais</a>
+			<a class="Links"  href="utilLinks.html">Links úteis</a>
+                        <footer class="footCss">
+                                <p>
+                                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                                            <img style="border:0;width:88px;height:31px"
+                                                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                                                alt="CSS válido!" />
+                                        </a>
+                                </p>
+                        </footer>
+		</article>
+		<article class="Home">
+		        <header>
+			        <p class="pageDefinition" >Links Úteis </p>
+			</header>
+			<p class="HomeText"> Links que foram bastantes úteis para criar essa página e para outros trabalhos</p>
+			<table class="tables"><!-- tabela para organizar os links da página -->
+				<tr>
+				        <th><a class="LinksPers" target="_blank"  href="https://stackoverflow.com/">
+					        <img class="imageUtil" src="Images/stack.png" alt="StackOverflow" >
+					    </a>
+					</th>
+					<th><a class="LinksPers"  href="http://www.w3schools.com/">
+				                <img class="imageUtil" src="Images/W3C.png" alt="W3C" >
+					    </a>
+					</th>
+				</tr>
+				<tr>
+				        <th><a class="LinksPers" target="_blank" href="http://www.google.com/">
+					        <img class="imageUtil" src="Images/google.png" alt="Google" >
+        				    </a>
+                                        </th>
+					<th><a class="LinksPers" target="_blank" href="http://www.ufpr.br/portalufpr/">
+						<img class="imageUtil" src="Images/ufpr.png" alt="UFPR" >
+        				    </a>
+                                        </th>
+				</tr>
+			</table>
+			<footer class="foot">
+				<p class="quote">"There are two kinds of pain. The sort of pain that makes you strong, or useless pain. The sort of pain that's only suffering. I have no patience for useless things." Frank Underwood</p>
+			</footer>
+		</article>
+	</nav>
     </body>
 </html>
