INT: Página quase terminada.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 			<header>
 				<p class="Nome" >Rafael Rocha de Carvalho</p>
 			</header>
-			<a class="Links"  href="#">
-					<img class="imageUtil" src="Images/one-piece.png" alt="Home" >
-			</a>
-			<a class="Links"  href="index.html">Home</a>
+			<img class="imageUtil" src="Images/one-piece.png" alt="Home" >
+			<a class="Links"  href="#">Home</a>
 			<a class="Links"  href="personal.html">Páginas pessoais</a>
 			<a class="Links"  href="utilLinks.html">Links úteis</a>
                         <footer class="footCss">
