--- a/personal.html
+++ b/personal.html
@@ -12,11 +12,9 @@
 		        <header>
 				<p class="Nome" >Rafael Rocha de Carvalho</p>
 			</header>
-			<a class="Links"  href="#">
-				<img class="imageUtil" src="Images/one-piece.png" alt="Personal" >
-			</a>
+			<img class="imageUtil" src="Images/one-piece.png" alt="Home" >
 			<a class="Links"  href="index.html">Home</a>
-			<a class="Links"  href="personal.html">Páginas pessoais</a>
+			<a class="Links"  href="#">Páginas pessoais</a>
 			<a class="Links"  href="utilLinks.html">Links úteis</a>
 			<footer class="footCss">
                                 <p>
@@ -32,7 +30,7 @@
 			<header>
 				<p class="pageDefinition" >Páginas Pessoais</p>
 			</header>
-			<p class="HomeText"> Páginas como meus repositórios no GitHub, meu perfil no stackExchange, no social MSDN e na Steam</p>
+			<p class="HomeText"> Páginas como meus repositórios no GitHub, meu perfil no stackExchange, no social MSDN e no CodeSchool</p>
 			<table class="tables"><!-- tabela para organizar os links da página -->
 		                <tr>
 			                <th><a class="LinksPers" target="_blank" href="https://github.com/memphis47">
@@ -46,11 +44,11 @@
 				</tr>
 				<tr>
 				        <th><a class="LinksPers" target="_blank" href="http://social.msdn.microsoft.com/profile/memphis47/">
-						<img class="imageUtil" src="Images/msdn.png" alt="Social MSDN" >
+						<img class="imageUtilSc" src="Images/msdn.png" alt="Social MSDN" >
 					    </a>
                                         </th>
-					<th><a class="LinksPers" target="_blank" href="#">
-					        <img class="imageUtil" src="Images/steam.png" alt="UFPR" >
+					<th><a class="LinksPers" target="_blank" href="https://www.codeschool.com/users/523783">
+					        <img class="imageUtilSc" src="Images/code_school.png" alt="CodeSchool" >
         				    </a>
                                         </th>
 				</tr>
