--- a/utilLinks.html
+++ b/utilLinks.html
@@ -12,12 +12,10 @@
 		        <header>
 			        <p class="Nome" >Rafael Rocha de Carvalho</p>
 			</header>
-			<a class="Links"  href="#">
-			        <img class="imageUtil" src="Images/one-piece.png" alt="utilLinks" >
-			</a>
+			<img class="imageUtil" src="Images/one-piece.png" alt="Home" >
 			<a class="Links"  href="index.html">Home</a>
 			<a class="Links"  href="personal.html">Páginas pessoais</a>
-			<a class="Links"  href="utilLinks.html">Links úteis</a>
+			<a class="Links"  href="#">Links úteis</a>
                         <footer class="footCss">
                                 <p>
                                         <a href="http://jigsaw.w3.org/css-validator/check/referer">
