--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
     </head>
     <body>
-	<nav >
+	<menu>
 	        <article class="LeftMenu">
 			<header>
 				<p class="Nome" >Rafael Rocha de Carvalho</p>
@@ -34,6 +34,6 @@
 				<li><p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento</p></li>
 			</ul>
 		</article>
-	</nav>
+	</menu>
     </body>
 </html>
