--- a/utilLinks.html
+++ b/utilLinks.html
@@ -7,7 +7,7 @@
         
     </head>
     <body>
-        <nav>
+        <menu>
 	        <article class="LeftMenu">
 		        <header>
 			        <p class="Nome" >Rafael Rocha de Carvalho</p>
@@ -57,6 +57,6 @@
 				<p class="quote">"There are two kinds of pain. The sort of pain that makes you strong, or useless pain. The sort of pain that's only suffering. I have no patience for useless things." Frank Underwood</p>
 			</footer>
 		</article>
-	</nav>
+	</menu>
     </body>
 </html>
