Arrumado tag main do personal

--- a/personal.html
+++ b/personal.html
@@ -7,7 +7,7 @@
         
     </head>
     <body>
-        <menu >
+        <main >
 	        <article class="LeftMenu">
 		        <header>
 				<p class="Nome" >Rafael Rocha de Carvalho</p>
@@ -58,7 +58,7 @@
 					someone who doesn't see the difference." Frank Underwood</p>
 		        </footer>
 	        </article>
-	</menu>
+	</main>
 
     </body>
 </html>
