INT: Atualizado Index.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 		<article class="Home">
 			<ul>
 				<li><p class="HomeTextTop"> Rafael Rocha de Carvalho</p></li>
-				<li><p class="HomeText"> Aluno Graduando da UFPR no curso de Bacharelado em Ciência da Computação</p></li>
-				<li><p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento</p></li>
+				<li><p class="HomeText"> Aluno Graduando da UFPR no curso de Bacharelado em Ciência da Computação.</p></li>
+				<li><p class="HomeText"> Estágiario na empresa LACTEC - Instituto de Tecnologia para o Desenvolvimento.</p></li>
+				<li><p class="HomeText"> Conhecimento em programação:</p></li>
+                                <ul>
+                                        <li><p class="HomeText"> C, C#, java, JSF, mySQL, Hibernate, Python, HTML e CSS. </p></li>
+                                </ul>
 			</ul>
 		</article>
 	</main>
